--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,115 +3,115 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_bg"
-    android:focusableInTouchMode="true"
-    android:orientation="vertical"
-    tools:context=".activity.ForgotPasswordActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
-
-    <LinearLayout
-        android:id="@+id/uperView"
+    <RelativeLayout
+        android:id="@+id/rl_title_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="@dimen/top_bar"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/ivBackIcon"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_gravity="start"
-            android:padding="8dp"
-            android:layout_margin="8dp"
-            android:src="@drawable/left_arrow_shape" />
+            android:layout_width="@dimen/top_bar_profile"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:paddingTop="@dimen/_12sdp"
+            android:paddingLeft="@dimen/_12sdp"
+            android:paddingRight="@dimen/_12sdp"
+            android:paddingBottom="@dimen/_2sdp"
+            app:srcCompat="@drawable/ic_back_icon" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:padding="@dimen/_10sdp"
-            android:src="@drawable/sk_logo_with_key_1" />
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/iv_report"
+            android:layout_width="@dimen/_180sdp"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:padding="@dimen/_5sdp"
+            app:srcCompat="@drawable/sk_logo_black" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:padding="@dimen/_12sdp">
 
         <TextView
-            android:id="@+id/tvForgotPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/_30sdp"
-            android:layout_marginTop="@dimen/_40sdp"
+            android:text="@string/whats_your_email"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_19sdp"
             android:fontFamily="@font/raleway_medium"
-            android:gravity="center"
-            android:text="@string/enter_your_registered_email_id_for_getting_the_password"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_14ssp" />
+            android:textStyle="bold"
+            />
 
-
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_25sdp"
-            android:layout_marginRight="@dimen/_25sdp"
-            android:layout_marginTop="@dimen/_40sdp"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_marginTop="@dimen/_10sdp"
+            android:text="@string/enter_your_registered_email_id_for_getting_the_password"
+            android:textColor="@color/dark_gray_new_reg"
+            android:textSize="@dimen/_13sdp"
+            android:fontFamily="@font/raleway_light"
+            />
 
-            <ImageView
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/mail_ico" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_15sdp"
+            >
+
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/img_email"
+                android:layout_width="@dimen/_13sdp"
+                android:layout_height="@dimen/_13sdp"
+                android:layout_centerVertical="true"
+                app:srcCompat="@drawable/email_ico" />
 
             <EditText
                 android:id="@+id/etEmailForgot"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:background="@null"
-                android:fontFamily="@font/raleway_light"
-                android:hint="@string/email"
-                android:imeOptions="actionNext"
+                android:layout_toRightOf="@+id/img_email"
+                android:hint="Email Address"
+                android:textColorHint="@color/email_hint_new_reg"
+                android:textColor="@color/email_text_new_reg"
+                android:textSize="@dimen/_11sdp"
+                android:layout_centerVertical="true"
                 android:inputType="textEmailAddress"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-                android:textSize="@dimen/_13ssp" />
-        </LinearLayout>
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:backgroundTint="@color/transparent"
+                android:drawableTint="@color/transparent"/>
+
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height=".5dp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginLeft="@dimen/_25sdp"
-            android:layout_marginRight="@dimen/_25sdp"
-            android:layout_marginStart="@dimen/_25sdp"
-            android:background="@color/white" />
+            android:layout_height="1dp"
+            android:background="@color/border_line_new_reg"/>
 
     </LinearLayout>
 
-
-    <RelativeLayout
+    <Button
+        android:id="@+id/btnSubmit"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:background="@drawable/new_next_btn_desable"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginLeft="@dimen/_12sdp"
+        android:layout_marginRight="@dimen/_12sdp"
+        style="?android:attr/borderlessButtonStyle"
+        android:textAllCaps="false"
+        android:fontFamily="@font/roboto_medium"
+        android:textColor="@color/button_text_new_reg"
+        android:text="@string/submit"/>
 
-        <Button
-            android:id="@+id/btnSubmit"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_37sdp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_30sdp"
-            android:layout_marginRight="@dimen/_30sdp"
-            android:layout_centerInParent="true"
-            android:background="@drawable/bg_button"
-            android:fontFamily="@font/raleway_medium"
-            android:gravity="center"
-            android:text="@string/submit"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_16ssp" />
-
-    </RelativeLayout>
 </LinearLayout>
