--- a/app/src/main/res/layout/registration_part_one_password.xml
+++ b/app/src/main/res/layout/registration_part_one_password.xml
@@ -44,6 +44,7 @@
         android:padding="@dimen/_12sdp">
 
         <TextView
+            android:id="@+id/tv_heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/whats_your_pass"
@@ -73,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/img_email"
-                android:hint="Enter Password"
+                android:hint="Password"
                 android:textColorHint="@color/email_hint_new_reg"
                 android:textColor="@color/email_text_new_reg"
                 android:textSize="@dimen/_11sdp"
@@ -102,6 +103,9 @@
         android:layout_marginRight="@dimen/_12sdp"
         android:textColor="@color/white"
         android:fontFamily="@font/roboto_medium"
+        style="?android:attr/borderlessButtonStyle"
+        android:textAllCaps="false"
+        android:textSize="@dimen/_14sdp"
         android:text="Sign in"/>
 
     <TextView
@@ -115,12 +119,37 @@
         android:fontFamily="@font/raleway_light"
         android:gravity="center"/>
 
-    <CheckBox
-        android:id="@+id/cb_tnc"
+    <LinearLayout
+        android:id="@+id/ll_cb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="I accept Term &amp; Conditions"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginLeft="@dimen/_12sdp"
+        android:layout_gravity="center"
+        android:gravity="center_vertical"
         android:visibility="gone"
-        android:textColor="@color/colorPrimaryDark_new"/>
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/cb_tnc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="I accept "
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:theme="@style/MyCheckbox"
+            android:textColor="@color/email_text_new_reg"/>
+
+        <TextView
+            android:id="@+id/tv_tnc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/tnc"
+            android:textColor="@color/colorPrimaryDark_new"
+            />
+
+    </LinearLayout>
+
 
 </LinearLayout>
