--- a/app/src/main/res/layout/adapter_custom_trending.xml
+++ b/app/src/main/res/layout/adapter_custom_trending.xml
@@ -207,6 +207,39 @@
 
                     </android.support.v4.view.ViewPager>
 
+                    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:layout_width="match_parent"
+                        android:layout_marginTop="@dimen/_30sdp"
+                        android:layout_centerInParent="true"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:id="@+id/rl_anim"
+                            android:background="@drawable/button_corner_border"
+                            android:layout_gravity="center"
+                            android:layout_width="@dimen/_250sdp"
+                            android:orientation="vertical"
+                            android:layout_height="@dimen/_50sdp"
+
+                            />
+
+                        <View
+                            android:id="@+id/inrect2"
+                            android:layout_width="@dimen/_245sdp"
+                            android:layout_height="@dimen/_45sdp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:background="@drawable/button_corner_border_trans" />
+
+                        <TextView android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="key in and share!"
+                            android:textColor="#ffffff"
+                            android:textSize="@dimen/_16sdp"
+                            android:layout_gravity="center"/>
+
+                    </FrameLayout>
+
                 </RelativeLayout>
 
                 <RelativeLayout
