--- a/app/src/main/res/layout/registration_part_one_basicinfo.xml
+++ b/app/src/main/res/layout/registration_part_one_basicinfo.xml
@@ -75,13 +75,13 @@
             android:layout_width="@dimen/_90sdp"
             android:layout_height="@dimen/_90sdp"
             android:layout_gravity="center"
-            android:src="@drawable/man_ico"
+            android:src="@drawable/placeholder_user1"
             />
 
             <ImageView
                 android:id="@+id/iv_camera"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
+                android:layout_width="@dimen/_26sdp"
+                android:layout_height="@dimen/_26sdp"
                 android:layout_gravity="center"
                 android:src="@drawable/camera_ico_new_reg"
                 android:layout_alignParentRight="true"
@@ -170,9 +170,9 @@
             android:layout_height="wrap_content"
             android:background="@drawable/new_next_btn_desable"
             android:layout_marginTop="@dimen/_40sdp"
-            android:layout_marginLeft="@dimen/_12sdp"
-            android:layout_marginRight="@dimen/_12sdp"
+            android:textSize="@dimen/_14sdp"
             android:fontFamily="@font/roboto_medium"
+            android:textAllCaps="false"
             android:textColor="@color/button_text_new_reg"
             android:text="Next"/>
 
